codepkg/objects/Pre_Application__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Eligible__c</fullName>
        <label>Activity Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Location_Latitude__c</fullName>
        <formula>TEXT(FLOOR( Activity_Location__Latitude__s ))+ &quot;.&quot; + RIGHT( TEXT((1 + Activity_Location__Latitude__s - FLOOR( Activity_Location__Latitude__s ) ) * 1000000 ), 6 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Provide latitude (32.306421) for at least one point at the activity location</inlineHelpText>
        <label>Activity Location Latitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Location_Longitude__c</fullName>
        <formula>TEXT(FLOOR( Activity_Location__Longitude__s ))+ &quot;.&quot; + RIGHT( TEXT(((-1) + Activity_Location__Longitude__s + FLOOR( Activity_Location__Longitude__s ) ) * 1000000 ), 6 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Provide longitude (-122.614581 format) for at least one point at the activity location.</inlineHelpText>
        <label>Activity Location Longitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Location__c</fullName>
        <inlineHelpText>Provide lat/long (32.30642, -122.61458 format) for the specific activity location, if the activity covers a wide area or multiple project sites provide polygon of the area.</inlineHelpText>
        <label>Activity Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Activity_TitleName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The project/plan title must include the subapplicant name and subapplication type or project type. Do not use abbreviations in the title. For example, Marin County Marin Center Exhibit Hall - Seismic Retrofit Project, City of Los Angeles Stormwater Analys</inlineHelpText>
        <label>Project / Plan Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_in_Mitigation_Plan__c</fullName>
        <inlineHelpText>The project does not have to be specifically referenced in your plan.</inlineHelpText>
        <label>Activity in Mitigation Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Match__c</fullName>
        <inlineHelpText>Financial responsibility of the subapplicant.</inlineHelpText>
        <label>Non-Federal Cost Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_Name_Entity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subapplicant Name (Entity)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <inlineHelpText>Subapplicant type should be based upon how the entity is identified in the Hazard Mitigation Plan, this excludes private non-profit.</inlineHelpText>
        <label>Subapplicant Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Private Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Special District</fullName>
                </value>
                <value>
                    <fullName>Tribal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <inlineHelpText>Planning - Activities include developing a new hazard mitigation plan or updating a current mitigation plan.</inlineHelpText>
        <label>Subapplication Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Planning-related</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Advance Assistance</fullName>
                </value>
                <value>
                    <fullName>5% Initiative</fullName>
                </value>
                <value>
                    <fullName>Flood Hazard Mitigation Planning</fullName>
                </value>
                <value>
                    <fullName>Project Scoping</fullName>
                </value>
                <value>
                    <fullName>Community Flood Mitigation Project</fullName>
                </value>
                <value>
                    <fullName>Individual Flood Mitigation Project</fullName>
                </value>
                <value>
                    <fullName>Capability and Capacity Building (C&amp;CB)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brief_Summary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>&quot;Complete the response in the format provided: Example: This flood mitigation project will reduce or prevent localized flooding of 25 houses in a North Sacramento subdivision resulting from rain events characterized by an average of 2 inches of rain</inlineHelpText>
        <label>Brief Summary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <inlineHelpText>Only use &quot;Multi-county&quot; if the project is located in more than one county.</inlineHelpText>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Statewide</fullName>
                </value>
                <value>
                    <fullName>Multi-County</fullName>
                </value>
                <value>
                    <fullName>Alameda</fullName>
                </value>
                <value>
                    <fullName>Alpine</fullName>
                </value>
                <value>
                    <fullName>Amador</fullName>
                </value>
                <value>
                    <fullName>Butte</fullName>
                </value>
                <value>
                    <fullName>Calaveras</fullName>
                </value>
                <value>
                    <fullName>Colusa</fullName>
                </value>
                <value>
                    <fullName>Contra Costa</fullName>
                </value>
                <value>
                    <fullName>Del Norte</fullName>
                </value>
                <value>
                    <fullName>El Dorado</fullName>
                </value>
                <value>
                    <fullName>Fresno</fullName>
                </value>
                <value>
                    <fullName>Glenn</fullName>
                </value>
                <value>
                    <fullName>Humboldt</fullName>
                </value>
                <value>
                    <fullName>Imperial</fullName>
                </value>
                <value>
                    <fullName>Inyo</fullName>
                </value>
                <value>
                    <fullName>Kern</fullName>
                </value>
                <value>
                    <fullName>Kings</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
                <value>
                    <fullName>Lassen</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Madera</fullName>
                </value>
                <value>
                    <fullName>Marin</fullName>
                </value>
                <value>
                    <fullName>Mariposa</fullName>
                </value>
                <value>
                    <fullName>Mendocino</fullName>
                </value>
                <value>
                    <fullName>Merced</fullName>
                </value>
                <value>
                    <fullName>Modoc</fullName>
                </value>
                <value>
                    <fullName>Mono</fullName>
                </value>
                <value>
                    <fullName>Monterey</fullName>
                </value>
                <value>
                    <fullName>Napa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Stage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If you do no your DUNS #, call Dun &amp; Bradstreet (D&amp;B) at 1-866-705-5711 for the information.</inlineHelpText>
        <label>DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_the_problem_to_be_mitigated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide a detailed description of the problem or the risk to be addressed. Include the cause of the problem, how long the problem has existed, the types of damages that occur (including dates and approx. costs), and any studies that have been performed.</inlineHelpText>
        <label>Describe the problem to be mitigated</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_the_scope_of_work__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide detailed information on the plan for mitigating risk, how will this action provide protection from future hazards, what is the implementation plan for this mitigation effort?</inlineHelpText>
        <label>Describe the scope of work</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_documents_for_this_project__c</fullName>
        <label>Design documents for this project?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Disaster</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Pre-Applications</relationshipLabel>
        <relationshipName>Pre_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Does_your_entity_have_an_active_LHMP__c</fullName>
        <inlineHelpText>To be eligible for funding a community must have participated in the Local Hazard Mitigation Planning (LHMP) process and formally adopted a LHMP through formal resolution. For BRIC and FMA, the LHMP must be approved and adopted at time of application</inlineHelpText>
        <label>Does your entity have an active LHMP?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EIN_For_Private_Non_Profits__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Employer Identification Number (EIN) is a federal nine-digit tax number that IRS assigns to non-profits, charities, organizations, and businesses in the following format: XX-XXXXXXX.</inlineHelpText>
        <label>EIN (For Private Non- Profits)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Responsible_For_Operation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Entity Responsible For Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Explain_why_project_not_in_conformance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Explain why project not in conformance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FIPS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If you do not know your FIPS #, you can request it by emailing HMA@caloes.ca.gov.</inlineHelpText>
        <label>FIPS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Request_Share__c</fullName>
        <inlineHelpText>Financial responsibility of federal government.</inlineHelpText>
        <label>Federal Request Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Federal_entity_have_funding_authority__c</fullName>
        <inlineHelpText>Is this activity eligible for funding from another federal program such as the NRCS Emergency Watershed Protection Act, FEMA Public Assistance Program, and the US Department of Agriculture/Department of the Interior Healthy Forest Restoration Act of 2002?</inlineHelpText>
        <label>Federal entity have funding authority?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name_of_Person_Completing_NOI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name of Person Completing NOI</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Opportunity</label>
        <referenceTo>Funding_Opportunity__c</referenceTo>
        <relationshipLabel>Pre-Applications</relationshipLabel>
        <relationshipName>Pre_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Future_Hazard_Event_Trigger__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Future Hazard Event Trigger</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HMA_Program__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HMA Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hazard__c</fullName>
        <label>Hazard</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Project_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Drought</fullName>
                </value>
                <value>
                    <fullName>Dam/Levee Break</fullName>
                </value>
                <value>
                    <fullName>Earthquake</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Flood</fullName>
                </value>
                <value>
                    <fullName>Hurricane</fullName>
                </value>
                <value>
                    <fullName>Mud/Landslide</fullName>
                </value>
                <value>
                    <fullName>Sea Level Rise</fullName>
                </value>
                <value>
                    <fullName>Winter Storm</fullName>
                </value>
                <value>
                    <fullName>Tornado</fullName>
                </value>
                <value>
                    <fullName>Tsunami</fullName>
                </value>
                <value>
                    <fullName>Windstorm</fullName>
                </value>
                <value>
                    <fullName>Multi Hazard</fullName>
                </value>
                <value>
                    <fullName>Multi-Hazard (Generator Only)</fullName>
                </value>
                <value>
                    <fullName>Heat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_yes_identify_the_program__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If yes, identify the program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_planning_studies__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If yes, planning studies?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_project_location__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If yes, project location?</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_proposed_project__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If yes, proposed project?</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Plan_For_Mitigation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Include who will lead implementation (name and/or title) and who will be responsible for performing the work (For example, in house personnel or contractor).</inlineHelpText>
        <label>Implementation Plan For Mitigation</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Independent_mitigation_activity__c</fullName>
        <inlineHelpText>Is this project dependent on another project or funding source (other than match) to be effectively implemented?</inlineHelpText>
        <label>Independent mitigation activity?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Application_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Application Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Project_Site_Identified__c</fullName>
        <label>Is Project Site Identified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_project_phased__c</fullName>
        <label>Is this project phased?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LHMP_Approval_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Private Non-Profits are not required to populate this field.</inlineHelpText>
        <label>LHMP Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LHMP_Development_Status__c</fullName>
        <inlineHelpText>Provide the status of the Local Hazard Mitigation Plan.</inlineHelpText>
        <label>LHMP Development Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>In OES Review</fullName>
                </value>
                <value>
                    <fullName>In FEMA Review</fullName>
                </value>
                <value>
                    <fullName>Pending Adoption</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name_of_Person_Completing_NOI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name of Person Completing NOI</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>Owner:User.Manager.FirstName  + &quot; &quot; +  Owner:User.Manager.LastName</formula>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mitigation_Dependent_On__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mitigation Dependent On</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Flood_Insurance_Program_NFIP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The community number is a 6-digit designation identifying each NFIP community. The first 2 numbers are the state code. The next 4 are the FEMA-assigned community number. An alphabetical suffix is added to a community number to identify revisions in FIRM</inlineHelpText>
        <label>National Flood Insurance Program (NFIP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_Level_Of_Design__c</fullName>
        <label>What is the percentage level of design?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_complete_are_the_designs__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Percentage complete are the designs?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Applicant_Match__c</fullName>
        <label>Percentage of Subapplicant Match</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Federal_Request_Share__c</fullName>
        <label>Percentage of Federal Request Share</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Physical_project_work_already_started__c</fullName>
        <inlineHelpText>Physical work includes ground-breaking, demolition, construction, and/or
geotechnical work that involves ground disturbance including soil boring?</inlineHelpText>
        <label>Physical project work already started?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planning_studies_or_feasibility_reports__c</fullName>
        <inlineHelpText>For example, do you have 30% design plans or an Hydrologic and Hydraulic study for this project</inlineHelpText>
        <label>Planning studies or feasibility reports?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previously_Submitted_HMA_Program__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previously Submitted HMA Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Pre-Applications</relationshipLabel>
        <relationshipName>Pre_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Duration_in_Months__c</fullName>
        <inlineHelpText>Indicate the number of months it will take for this mitigation action to be implemented. Cannot exceed 36 months (33 months implementation plus 3 months for closeout)</inlineHelpText>
        <label>Project Duration (in Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For example, DR4407-PJ0001</inlineHelpText>
        <label>Project Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <inlineHelpText>Acquisition Demo-Relocation - Purchase of properties on a voluntary basis in order to remove structure(s) from natural hazards (flood/landslide/avalanche). Structures must be demolished or relocated outside hazard.</inlineHelpText>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New Plan</fullName>
                </value>
                <value>
                    <fullName>Plan Update</fullName>
                </value>
                <value>
                    <fullName>Planning-Related Activities</fullName>
                </value>
                <value>
                    <fullName>Acquisition Demo-Relocation</fullName>
                </value>
                <value>
                    <fullName>Drainage/Flood Control</fullName>
                </value>
                <value>
                    <fullName>Elevation-Floodproofing</fullName>
                </value>
                <value>
                    <fullName>Safe Room/Shelter</fullName>
                </value>
                <value>
                    <fullName>Seismic Retrofitting</fullName>
                </value>
                <value>
                    <fullName>Wildfire &amp; Vegetation Management</fullName>
                </value>
                <value>
                    <fullName>Generator(s)/Other Power Source(s)</fullName>
                </value>
                <value>
                    <fullName>Mitigation Reconstruction</fullName>
                </value>
                <value>
                    <fullName>Tsunami Vertical Evacuation</fullName>
                </value>
                <value>
                    <fullName>Advance Assistance</fullName>
                </value>
                <value>
                    <fullName>Post-Disaster Code Enforcement</fullName>
                </value>
                <value>
                    <fullName>Public Awareness and Education</fullName>
                </value>
                <value>
                    <fullName>Early Warning Systems</fullName>
                </value>
                <value>
                    <fullName>Hazard Identification or Mapping</fullName>
                </value>
                <value>
                    <fullName>GIS for Mitigation</fullName>
                </value>
                <value>
                    <fullName>New Techniques/Methods</fullName>
                </value>
                <value>
                    <fullName>Project Scoping</fullName>
                </value>
                <value>
                    <fullName>Nature-Based Solutions/Green Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Planning-New Plan</fullName>
                </value>
                <value>
                    <fullName>Partnerships</fullName>
                </value>
                <value>
                    <fullName>Building Code</fullName>
                </value>
                <value>
                    <fullName>Planning-Plan Update</fullName>
                </value>
                <value>
                    <fullName>Utility and Infrastructure Protection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_in_a_Special_Flood_Hazard_Area__c</fullName>
        <inlineHelpText>A Special Flood Hazard Area (SFHA) is an area having special flood, mudflow or flood-related erosion hazards and shown on a Flood Hazard Boundary Map (FHBM) or a Flood Insurance Rate Map (FIRM).</inlineHelpText>
        <label>Project in a Special Flood Hazard Area?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_in_conformance_with_latest_codes__c</fullName>
        <inlineHelpText>Mitigation projects must, at a minimum, be in conformance with the latest published editions of relevant consensus-based codes, specifications, and standards that incorporate the latest hazard-resistant designs.</inlineHelpText>
        <label>Project in conformance with latest codes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_located_in_NFIP__c</fullName>
        <label>Project located in NFIP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_location_have_the_hazard__c</fullName>
        <inlineHelpText>&quot;Resources such as FEMA flood maps, tsunami maps, landslide maps or similar documents can be used to document the extent and severity of the hazard.&quot;</inlineHelpText>
        <label>Project location have the hazard?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_mitigate_Severe_Repetitive_Loss__c</fullName>
        <inlineHelpText>Severed Repetitive Loss (SRL): At least two separate NFIP claim payments have been made with the cumulative amount of such claims exceeding the market value of the insured structure OR four or more separate NFIP claims</inlineHelpText>
        <label>Project mitigate Severe Repetitive Loss</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Severe Repetitive Loss(SRL)</fullName>
                </value>
                <value>
                    <fullName>Repetitive Loss(RL)</fullName>
                </value>
                <value>
                    <fullName>Both SRL and RL</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>